<resources>
    <string name="app_name">CookBOOK</string>
    <string name="settings">Налаштування</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Ouput_possibility">Організаця лєнти новин</string>
    <string name="column_one">Одна колонка</string>
    <string name="column_two">Дві колонки</string>
    <string name="column_three">Три колонки</string>
    <string name="Sorting_possibility">Спосіб сортування</string>
    <string name="Top_Rated">TOP Rated</string>
    <string name="Trending">Trending</string>
    <string name="setting_searh">Наступна сторінка</string>
    <string name="Accept">Застосувати</string>
    <string name="Cancel">Відмінити</string>
    <string name="Food">Страва</string>
    <string name="imageSize">Розмір картинки</string>

</resources>
