<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:minWidth="250dp"
    android:minHeight="300dp">

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:layout_margin="@dimen/Margin_5dp"
            android:text="@string/Ouput_possibility"
            android:layout_gravity="center_horizontal|top"
            android:gravity="center_horizontal|top"
            android:textSize="18sp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/column_one"
            android:id="@+id/radioButton"
            android:checked="false" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/column_two"
            android:id="@+id/radioButton1"
            android:layout_gravity="center_horizontal|left"
            android:checked="false" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/column_three"
            android:id="@+id/radioButton2"
            android:layout_gravity="center_horizontal|left"
            android:checked="false" />
    </RadioGroup>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            android:layout_margin="@dimen/Margin_5dp"
            android:text="@string/Sorting_possibility"
            android:layout_gravity="center_horizontal|top"
            android:gravity="center_horizontal|top"
            android:textSize="18sp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Top_Rated"
            android:id="@+id/radioButton3"
            android:layout_gravity="center_horizontal|left"
            android:checked="false" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Trending"
            android:id="@+id/radioButton4"
            android:layout_gravity="center_horizontal|left"
            android:checked="false" />
    </RadioGroup>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.21">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Accept"
            android:id="@+id/button"
            android:layout_gravity="left"
            android:gravity="center_vertical|center_horizontal"
            android:enabled="true"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:clickable="true" />

    </RelativeLayout>

</LinearLayout>